Update JVM OPTS